--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,10 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "skipDefaultLibCheck": true,    
+    "skipLibCheck": true,
+    "strictNullChecks" : false,
+    "strictPropertyInitialization": false,
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
